; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/edquota/extr_edquota.c_freeprivs.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/edquota/extr_edquota.c_freeprivs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.quotause = type { %struct.quotause*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @freeprivs(%struct.quotause* %0) #0 {
  %2 = alloca %struct.quotause*, align 8
  %3 = alloca %struct.quotause*, align 8
  %4 = alloca %struct.quotause*, align 8
  store %struct.quotause* %0, %struct.quotause** %2, align 8
  %5 = load %struct.quotause*, %struct.quotause** %2, align 8
  store %struct.quotause* %5, %struct.quotause** %3, align 8
  br label %6

6:                                                ; preds = %19, %1
  %7 = load %struct.quotause*, %struct.quotause** %3, align 8
  %8 = icmp ne %struct.quotause* %7, null
  br i1 %8, label %9, label %21

9:                                                ; preds = %6
  %10 = load %struct.quotause*, %struct.quotause** %3, align 8
  %11 = getelementptr inbounds %struct.quotause, %struct.quotause* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @quota_close(i32 %12)
  %14 = load %struct.quotause*, %struct.quotause** %3, align 8
  %15 = getelementptr inbounds %struct.quotause, %struct.quotause* %14, i32 0, i32 0
  %16 = load %struct.quotause*, %struct.quotause** %15, align 8
  store %struct.quotause* %16, %struct.quotause** %4, align 8
  %17 = load %struct.quotause*, %struct.quotause** %3, align 8
  %18 = call i32 @free(%struct.quotause* %17)
  br label %19

19:                                               ; preds = %9
  %20 = load %struct.quotause*, %struct.quotause** %4, align 8
  store %struct.quotause* %20, %struct.quotause** %3, align 8
  br label %6

21:                                               ; preds = %6
  ret void
}

declare dso_local i32 @quota_close(i32) #1

declare dso_local i32 @free(%struct.quotause*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
